2009-05-04  Johannes Schmid <jschmid@openismus.com>

  * examples/gtk_embed/main.c:
  * examples/gtk_scrolling/main.c:
  * examples/scrolling/main.c:
  * docs/tutorial/clutter-tut.xml:
  * docs/tutorial/figures/scrolling.png_
  * docs/tutorial/figures/gtk_scrolling.png:
  
  Bring back old scrolling example and reorganize tutorial
  
  The old scrolling appendix is now back in place while the gtk scrolling
  examples was moved inside the stage section near to the gtk embed widget.
  Also renamed the Gtk+ examples so that they can be recognized as part of
  clutter-gtk.

2009-05-04  Johannes Schmid <jschmid@openismus.com>

	* examples/text/main.c:
	* docs/tutorial/figures/text.png:
	
	Fixed text alignment in example and updated screenshot (#935)

2009-05-04  Johannes Schmid <jschmid@openismus.com>

	* configure.ac
	* examples/entry/*
	
	Removed obsolete entry example

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct section IDs.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	ClutterText corrections.
	
	* docs/tutorial/clutter-tut.xml: ClutterText section: Correct/Improve the 
	text.
	* examples/text/main.c (main): Add a second ClutterText so we have one 
	non-editable and one editable multi-line editable.

2009-04-30  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.
	
	* configure.ac: 
	* examples/text/Makefile.am: Added this file and mentioned it to fix the 
	build.
	* examples/text/main.c, examples/scrolling/main.c: Correct formatting. 

2009-04-29  Johannes Schmid  <jschmid@openismus.com>

	* examples/text/main.c:
	* examples/Makefile.am:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/text.png:
	Added section for ClutterText
	
	Added a section and an example for ClutterText. Moved scrolling section
	to normal section from appendix.

2009-04-29  Johannes Schmid  <jschmid@openismus.com>

	* examples/scrolling/main.c:
	* examples/scrolling/Makefile.am:
	* docs/tutorial/clutter-tut.xml: