@@ -5,7 +5,7 @@ figuresdir = $(clutter_docdir)/tutorial/figures
 figures_DATA = actors.png actor_events.png actor_group.png actor_transformations.png \
                behaviours.png custom_actor.png custom_container.png full_example.png animation.png \
                multiline_text_entry.png stage.png \
-               stage_widget.png score.png scrolling.png timeline.png \
+               stage_widget.png gtk_scrolling.png score.png scrolling.png timeline.png \
                alpha-func.png path-alpha-func.png
 
 EXTRA_DIST = $(figures_DATA)
